# 3D-Rendering-SDL2

./: .gitignore  CMakeLists.txt  README.md  main.cpp  renderer3d.cpp  renderer3d.h  tetx.txt
3Dcube/: CMakeLists.txt  main.cpp  renderer3d.cpp  renderer3d.h
videos/: 2023-08-23 10-40-19.mkv  2023-08-23 10-40-56.mkv
